Fix JSON nametag parsing